--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,20 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
-	"cr": "Queen Alexa",
-	"yt":"https://youtube.com/",
-	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
-	"ig": "https://instagram.com/HYPER_MOD",
-	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
-	"botname":"「 Queen Alexa 」",
-	"img":"https://k.top4top.io/p_2001zgi471.jpg",
-	"thumb":"thumbnail.jpg",
-	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"ownerNumber": "15064060045",
+	"ownerNumberr": "+15064060045",
+	"botnumber": "15064060045",
+	"cr": "Mrs TOM",
+	"yt":"https://youtube.com/channel/UCrpHmZaLoD80dFsD1mj7ybA",
+	"grub":"https://chat.whatsapp.com/G7YoWzw6M3J1AmIVjEqk7A",
+	"wa": "wa.me/+15064060045",
+	"donate": "15064060045",
+	"ig": "https://instagram.com/TOM_XE",
+	"gt": "https://github.com/TOM-XE",
+	"ownername": "© TOM-XE",
+	"botname":"「 Mrs TOM 」",
+	"img":"https://imgur.com/CZCHk7F",
+	"thumb":"https://imgur.com/CZCHk7F",
+	"fakethumb":"https://imgur.com/CZCHk7F",
+	"fake": " 「 Mrs TOM 」\n© TOM-XE"
 }
