--- a/settings.json
+++ b/settings.json
@@ -11,10 +11,10 @@
 	"donate": "94767043432",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
+	"ownername": "© TOMXE7",
 	"botname":"「 Queen Alexa 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 queen Alexa 」\n© TOMXE7"
 }
