--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-"name": "Queen-Alexa",
+"name": "Mrs-TOM",
   "description": "Lightweight WhatsApp Bot",
-  "repository": "https://github.com/HYPER-MOD/Queen-Alexa",
-  "logo": "https://www.linkpicture.com/q/HYPER-MOD-LOGO.jpg",
+  "repository": "https://github.com/TOMXE7/Mrs TOM",
+  "logo": "https://www.linkpicture.com/q/TOMXE7-LOGO.jpg",
   "keywords": ["bot", "whatsapp", "whatsapp-bot"],
 
     "buildpacks": [
